err/imbolc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/imbolc'...
Compiling './lib/python3.5/site-packages/imbolc/daemon.py'...
***   File "./lib/python3.5/site-packages/imbolc/daemon.py", line 37
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imbolc/debug.py'...
***   File "./lib/python3.5/site-packages/imbolc/debug.py", line 21
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/imbolc/decorators.py'...
***   File "./lib/python3.5/site-packages/imbolc/decorators.py", line 22
    print test()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imbolc/file.py'...
***   File "./lib/python3.5/site-packages/imbolc/file.py", line 47
    print len(fns)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imbolc/gthread.py'...
***   File "./lib/python3.5/site-packages/imbolc/gthread.py", line 31
    print 'Starting %s' % host
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/imbolc/kv.py'...
***   File "./lib/python3.5/site-packages/imbolc/kv.py", line 30
    print db['a']
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/imbolc/memory.py'...
***   File "./lib/python3.5/site-packages/imbolc/memory.py", line 15
    print mt
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/imbolc/pp.py'...
***   File "./lib/python3.5/site-packages/imbolc/pp.py", line 18
    print json.dumps(obj, ensure_ascii=False, indent=4,
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imbolc/send.py'...
***   File "./lib/python3.5/site-packages/imbolc/send.py", line 46
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imbolc/structures.py'...
***   File "./lib/python3.5/site-packages/imbolc/structures.py", line 11
    print len(a)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imbolc/thread.py'...
***   File "./lib/python3.5/site-packages/imbolc/thread.py", line 25
    print om.url.load('zenpad.ru').body[:10]
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/imbolc-0.0.14.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/procname-0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
